Fix protocols: Add public can_handle() method to Acl class and update server.py
- Added public can_handle() method to FlextLdifServersBase.Acl
- Updated FlextLdifServer.find_acl_for_line() to use public can_handle()
- Updated find_entry_handler() to use public can_handle()
- Changed Schema find methods to use public can_handle_attribute() and can_handle_objectclass()
- Removes private method access violations from server.py
- Maintains backward compatibility with deprecated aliases

--- a/docs/migration/v0.9-to-v1.0-migration.md
+++ b/docs/migration/v0.9-to-v1.0-migration.md
@@ -163,7 +163,7 @@ from flext_ldif.services.server import FlextLdifServer
 from flext_ldif.services.manager import FlextLdifQuirksManager
 from flext_ldif.services.conversion import QuirksConversionMatrix
 from flext_ldif.servers.oid import FlextLdifServersOid
-from flext_ldif.servers.oud_quirks import FlextLdifServersOud
+from flext_ldif.servers.ouds import FlextLdifServersOud
 ```
 
 ---
