--- a/docs/migration/v0.9-to-v1.0-migration.md
+++ b/docs/migration/v0.9-to-v1.0-migration.md
@@ -299,8 +299,8 @@ config = ldif.config  # ❌ Property removed
 **After** (v1.0):
 
 ```python
-from flext_ldif import FlextLdifConfig  # ✅ Direct import
-config = FlextLdifConfig()
+from flext_ldif import FlextLdifSettings  # ✅ Direct import
+config = FlextLdifSettings()
 ```
 
 #### constants Property Removed
