--- a/docs/migration/v0.9-to-v1.0-migration.md
+++ b/docs/migration/v0.9-to-v1.0-migration.md
@@ -2,29 +2,29 @@
 
 
 <!-- TOC START -->
-- [Overview](#overview)
-- [For Standard Users (No Changes Required)](#for-standard-users-no-changes-required)
-- [For Advanced Users (Import Changes)](#for-advanced-users-import-changes)
-  - [1. Module Import Path Changes](#1-module-import-path-changes)
-  - [2. Processor Changes (Use flext-core Directly)](#2-processor-changes-use-flext-core-directly)
-  - [3. Entry Helper Methods Removed (Use Model Methods)](#3-entry-helper-methods-removed-use-model-methods)
-  - [4. Property Accessors Removed (Direct Imports)](#4-property-accessors-removed-direct-imports)
-  - [5. Pattern Matching for Unified Methods](#5-pattern-matching-for-unified-methods)
-- [Automated Migration Script](#automated-migration-script)
-- [Test Migration](#test-migration)
-- [Troubleshooting](#troubleshooting)
-  - [Import Errors](#import-errors)
-  - [Attribute Errors on FlextLdif](#attribute-errors-on-flextldif)
-  - [Type Errors with parse()](#type-errors-with-parse)
-- [Getting Help](#getting-help)
-  - [Resources](#resources)
-  - [Support](#support)
-- [Summary](#summary)
+- Overview
+- For Standard Users (No Changes Required)
+- For Advanced Users (Import Changes)
+  - 1. Module Import Path Changes
+  - 2. Processor Changes (Use flext-core Directly)
+  - 3. Entry Helper Methods Removed (Use Model Methods)
+  - 4. Property Accessors Removed (Direct Imports)
+  - 5. Pattern Matching for Unified Methods
+- Automated Migration Script
+- Test Migration
+- Troubleshooting
+  - Import Errors
+  - Attribute Errors on FlextLdif
+  - Type Errors with parse()
+- Getting Help
+  - Resources
+  - Support
+- Summary
 <!-- TOC END -->
 
 ## Overview
 
-Version 1.0 simplifies flext-ldif through structural and architectural changes documented in [ADR-006](../adr/adr-006-simplification-refactoring.md). The **public API remains stable** - most users require no changes. This guide helps advanced users who import internal modules.
+Version 1.0 simplifies flext-ldif through structural and architectural changes documented in ADR-006. The **public API remains stable** - most users require no changes. This guide helps advanced users who import internal modules.
 
 **Key Changes**:
 
@@ -527,10 +527,10 @@ dn = entry.dn.value  # Instead of ldif.get_entry_dn(entry)
 
 ### Resources
 
-- **Documentation**: [docs/README.md](../README.md)
-- **API Reference**: [docs/api-reference.md](../api-reference.md)
-- **Architecture**: [docs/architecture.md](../architecture.md)
-- **ADR-006**: [docs/adr/adr-006-simplification-refactoring.md](../adr/adr-006-simplification-refactoring.md)
+- **Documentation**: docs/README.md
+- **API Reference**: docs/api-reference.md
+- **Architecture**: docs/architecture.md
+- **ADR-006**: docs/adr/adr-006-simplification-refactoring.md
 
 ### Support
 
